2002-03-06  Roland McGrath  <roland@frob.com>

	* dir-mkfile.c (diskfs_S_dir_mkfile): Clear OPENONLY_STATE_MODES bits
	from FLAGS, not all bits outside O_RDWR|O_EXEC.

2002-03-05  Marcus Brinkmann  <marcus@gnu.org>

	* diskfs.h: Refer to dir_lookup, not dir_pathtrans, in comment.
	* fsys-getroot.c (diskfs_S_fsys_getroot): Likewise.
	Reported by James A Morrison <ja2morri@student.math.uwaterloo.ca>.

2002-01-03  Roland McGrath  <roland@frob.com>

	* dir-lookup.c (diskfs_S_dir_lookup): Clear S_ITRANS bits in MODE.
	* dir-mkdir.c (diskfs_S_dir_mkdir): Likewise.
	* dir-mkfile.c (diskfs_S_dir_mkfile): Likewise.

	* file-chmod.c (diskfs_S_file_chmod): Preserve S_ITRANS bits in change.

2002-01-02  Roland McGrath  <roland@frob.com>

	* boot-start.c (diskfs_start_bootstrap) [KERN_INVALID_LEDGER]:
	Pass extra arguments to task_create for OSF variant.

2001-12-31  Roland McGrath  <roland@frob.com>

	* disk-pager.c (fault_handler): Use sc_pc instead of sc_eip.

2001-12-08  Roland McGrath  <roland@frob.com>

	* dir-lookup.c (diskfs_S_dir_lookup): Append trailing / to RETRYNAME
	returned for absolute symlink when MUSTBEDIR is set.
	Reported by Moritz Schulte <moritz@duesseldorf.ccc.de>.
	Also, bcopy -> memcpy; avoid strcat.

2001-10-30  Marcus Brinkmann  <marcus@gnu.org>

	* dir-lookup.c (diskfs_S_dir_lookup): When looking up the next
	pathname component, remove assertion for DS and allocate DS if 0.
	Allow creation of files through symlink with non-existant target.
	From Roland McGrath <roland@frob.com>.

2001-10-11  Roland McGrath  <roland@frob.com>

	* dir-renamed.c (diskfs_rename_dir): Fix bogus assert.
	From Moritz Schulte <moritz@chaosdorf.de>.

2001-10-01  Marcus Brinkmann  <marcus@gnu.org>

	* file-getfh.c (diskfs_S_file_getfh): Fix tag of diskfs_fhandle.
	Submitted by Maurizio Boriani <baux@debian.org>.

2001-08-22  Neal H Walfield  <neal@cs.uml.edu>

        * opts-std-startup.c (startup_options): New compatibility